# tru-rp

./: .env  Cargo.toml  README.md  startup.sh
backend/: Cargo.toml
backend/src/: app_state.rs  auth.rs  lib.rs  router.rs  routes.rs  service.rs
backend/src/routes/: projects.rs  timelogs.rs  users.rs
backend/src/routes/timelogs/: create_timelog.rs  delete_timelogs.rs  get_timelogs.rs  update_timelogs.rs
backend/src/service/: timelogs.rs
backend/src/utilities/: app_error.rs
entity/: Cargo.toml
entity/src/: dto.rs  lib.rs
entity/src/entities/: managers.rs  mod.rs  prelude.rs  projects.rs  sea_orm_active_enums.rs  time_entries.rs  users.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/lib/api/: projects.ts  timelog.ts  users.ts
frontend/src/lib/components/: ManagerReview.svelte  Metrics.svelte  NavButton.svelte  ProjectOverview.svelte  SectionView.svelte  Settings.svelte  TimeEntry.svelte  Toast.svelte  TopBanner.svelte  UserAdministration.svelte  modal.svelte
frontend/src/lib/model/: general.ts  timelogs.ts  users.ts
frontend/src/lib/stores/: admin.ts  manager.ts  metrics.ts  notifications.ts  projects.ts  timelog.ts  user.ts
frontend/src/lib/types/: timelogs.ts  users.ts
frontend/src/lib/utilities/: utilities.ts
frontend/src/routes/: +page.svelte
migration/src/: lib.rs  m20231213_151102_create_table.rs  m20231213_151102_create_users.rs  m20231214_151102_create_projects.rs  m20231214_151102_create_table.rs  m20231215_151102_create_table.rs  m20231215_151102_create_timelogs.rs
src/: main.rs
(+8 files in other folders)
