[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
axum = { version = "0.7.3", features = ["macros"] }
bcrypt = "0.13.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "8.2.0"
sea-orm = { version = "0.10.5", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
migration = { path = "../migration" }
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.75"
tower-http = { version = "0.5.0", features = ["cors"] }
futures = "0.3.30"
